Initial commit for base image

--- a/baseimages-master/Jenkinsfile
+++ b/baseimages-master/Jenkinsfile
@@ -1,10 +1,10 @@
 /** Jenkins 2.0 Buildfile
  *
  * Master Jenkins 2.0 can be started by typing:
- * docker run -d -p 8090:8080 --name jenkins rajeshmanoharan/jenkins
+ * docker run -d -p 8090:8080 --name jenkins manoharanrajesh/jenkins
  *
  * Slave 'docker' can be started by typing:
- * docker run -d -v /var/run/docker.sock:/var/run/docker.sock --link jenkins:jenkins -e "SWARM_CLIENT_LABELS=docker" rajeshmanoharan/swarm-dockerhost
+ * docker run -d -v /var/run/docker.sock:/var/run/docker.sock --link jenkins:jenkins -e "SWARM_CLIENT_LABELS=docker" manoharanrajesh/swarm-dockerhost
  **/
 node {
   checkout scm
